--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -28,4 +28,5 @@ jobs:
           node-version: ${{matrix.node-version}}
       
       - run: npm ci
+      - run: npm install gh-pages
       - run: ngh
